ch19/hostnet.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostnet
  namespace: kubebook-ch19-shop
spec:
  hostNetwork: true
  terminationGracePeriodSeconds: 1
  nodeSelector:
    kubernetes.io/hostname: kubebook-ch19-worker2
  containers:
    - name: hostnet
      image: busybox:1.37
      command: ["sleep", "3600"]
