ch19/ex-stage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: srv
  namespace: kubebook-ch19-ex
  labels:
    app: srv
spec:
  nodeSelector:
    kubernetes.io/hostname: kubebook-ch19-worker
  terminationGracePeriodSeconds: 1
  containers:
    - name: srv
      image: nginx:1.28-alpine
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: srv
  namespace: kubebook-ch19-ex
spec:
  selector:
    app: srv
  ports:
    - port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: good
  namespace: kubebook-ch19-ex
  labels:
    role: frontend
spec:
  nodeSelector:
    kubernetes.io/hostname: kubebook-ch19-worker2
  terminationGracePeriodSeconds: 1
  containers:
    - name: good
      image: busybox:1.37
      command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: bad
  namespace: kubebook-ch19-ex
  labels:
    role: other
spec:
  nodeSelector:
    kubernetes.io/hostname: kubebook-ch19-worker2
  terminationGracePeriodSeconds: 1
  containers:
    - name: bad
      image: busybox:1.37
      command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: net
  namespace: kubebook-ch19-ex
  labels:
    role: net
spec:
  nodeSelector:
    kubernetes.io/hostname: kubebook-ch19-worker2
  terminationGracePeriodSeconds: 1
  containers:
    - name: net
      image: busybox:1.37
      command: ["sleep", "3600"]
