ch19/allow-all-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-api
  namespace: kubebook-ch19-shop
spec:
  podSelector:
    matchLabels:
      app: api
  ingress:
    - {}
