ch19/allow-nothing.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nothing
  namespace: kubebook-ch19-shop
spec:
  podSelector:
    matchLabels:
      app: nosuch
  ingress:
    - {}
