ch19/allow-ops-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ops-frontend
  namespace: kubebook-ch19-shop
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              team: ops
          podSelector:
            matchLabels:
              role: frontend
      ports:
        - port: 80
