ch19/allow-ops-or-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ops-or-backend
  namespace: kubebook-ch19-shop
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              team: ops
        - podSelector:
            matchLabels:
              role: backend
