ch19/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: kubebook-ch19-ops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
