ch19/deny-egress-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-front
  namespace: kubebook-ch19-shop
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
    - Egress
