ch19/deny-ingress-empty.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-empty
  namespace: kubebook-ch19-shop
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
