ch19/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
  namespace: kubebook-ch19-shop
spec:
  podSelector: {}
  policyTypes:
    - Ingress
