ch19/ex-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ex-allow-frontend
  namespace: kubebook-ch19-ex
spec:
  podSelector:
    matchLabels:
      app: srv
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 80
