ch19/ex-and.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ex-and
  namespace: kubebook-ch19-ex
spec:
  podSelector:
    matchLabels:
      app: srv
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubebook-ch19-ops
          podSelector:
            matchLabels:
              role: backend
