ch19/ex-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ex-deny-egress
  namespace: kubebook-ch19-ex
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
    - Egress
