ch19/ingress-only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-only
  namespace: kubebook-ch19-shop
spec:
  podSelector:
    matchLabels:
      role: other
  policyTypes:
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: web
